--- a/research report.tex
+++ b/research report.tex
@@ -1,6 +1,8 @@
 \documentclass[a4paper,12pt]{article}
 \usepackage[english]{babel}
 \usepackage{mathtools}
+\usepackage{graphicx}
+\graphicspath{ {graphs/} }
 
 \begin{document}
 
