--- a/research report.tex
+++ b/research report.tex
@@ -75,7 +75,7 @@ As output data, we get optimised graphs of course, but in order to answer our su
 Our results were interesting and proved some of our hypotheses right while proving others wrong. We continuously used 5 tests per different variable setting.
 \begin{itemize}
 \item We hypothesised that the runtime of the algorithm increases linearly as the number of iterations increases. This implies that each iteration computes in roughly the same amount of time.
-\item We hypothesises that the runtime of the algorithm increases quadratically as the number of input vertices increases.
+\item We hypothesised that the runtime of the algorithm increases quadratically as the number of input vertices increases.
 \item We hypothesised that the average edge-length decreases linearly as we decrease the value of $c_1$. This was proven wrong however. We found that the mean increased and we calculated the correlation to be $r=-0.73278$ which is a fairly strong negative correlation. As we can see in figure \ref{fig:graphc1}, this increase does not appear to be linear.
 \begin{figure}[h]
 	\centering
