--- a/research report.tex
+++ b/research report.tex
@@ -96,7 +96,7 @@ The resulting graphs became bigger and bigger and as such they became hard to re
 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
 \section{Reflection}
-During our reflection of this project we have seen how we worked, what we accomplished and of course how we can improve. First of all, we underestimated certain aspects of this research. After we had found our algorithm to implement, we thought that we would be done rather quickly but we soon discovered it was far more work than we thought it would be. The implementation turned out to still be fairly challenging. This caused us to get stuck on this for longer than we would have liked. Our initial plans for test-data did not work out as we had hoped. We wanted to use the Dutch railway system as a graph, however we were unable to get this information and so we have had to scrap the idea. Handling the results still turned out to be quite the task and we have not been able to write down all that we wanted to write down. We were able to make a decent answer to our research question, but this could still need improvements since we did not have a clear question at the start of our project. This was a good learning experience and we hope to be able to improve on this should we do research again.
+During our reflection of this project we have seen how we worked, what we accomplished and of course how we can improve. First of all, we underestimated certain aspects of this research. After we had found our algorithm to implement, we thought that we would be done rather quickly but we soon discovered it was far more work than we thought it would be. The implementation turned out to still be fairly challenging. This caused us to get stuck on this for longer than we would have liked. Our initial plans for test-data did not work out as we had hoped. We wanted to use the Dutch railway system as a graph, however we were unable to get this information and so we have had to scrap the idea. Handling the results still turned out to be quite the task and we have not been able to write down all that we wanted to write down. We were able to make a decent answer to our research question, but this could still need improvements since we did not have a clear question at the start of our project. It also did not help that one of our team members had to quit due to personal reasons. Overall, this was a good learning experience and we hope to be able to improve on this should we do research again.
 
 
 \begin{thebibliography}{99}
