--- a/research report.tex
+++ b/research report.tex
@@ -75,7 +75,7 @@ As output data, we get optimised graphs of course, but in order to answer our su
 Our results were interesting and proved some of our hypotheses right while proving others wrong. We continuously used 5 tests per different variable setting.
 \begin{itemize}
 \item We hypothesised that the runtime of the algorithm increases linearly as the number of iterations increases. This implies that each iteration computes in roughly the same amount of time.
-\item We hypothesised that the runtime of the algorithm increases quadratically as the number of input vertices increases. This has been proven mostly true. As shown in the figure below, both F\&R and Eames are a good fit, with Coëfficients of Determination above 0.95. Furthermore, a two-tailed, paired-samples t-test shows that the runtime values are clearly unrelated with $p = 3.8 * 10^{-17}$. Interestingly, Eames shows $O(n^3)$-like behaviour, whereas $O(n^2)$ is expected. F\&R does behave as expected.
+\item We hypothesised that the runtime of the algorithm increases quadratically as the number of input vertices increases. This has been proven mostly true. As shown in the figure below, both F\&R and Eades are a good fit, with Coëfficients of Determination above 0.95. Furthermore, a two-tailed, paired-samples t-test shows that the runtime values are clearly unrelated with $p = 3.8 * 10^{-17}$ with $n = 570$. Interestingly, Eades shows $\mathcal{O}(n^3)$-like behaviour, whereas $\mathcal{O}(n^2)$ is expected. F\&R does behave as expected.
 \begin{figure}[h]
   \centering
   \includegraphics[height=7cm]{timecomplexity}
@@ -97,10 +97,10 @@ The resulting graphs became smaller and smaller and as such, became increasingly
 The resulting graphs became bigger and bigger and as such they became hard to read and put into one image. The standard deviation increased as well.
 \end{itemize}
 
-
 \section{Discussion and conclusion}
-Our conclusion is that even though the technology has vastly improved over the years since 1984, the algorithm of Eades is still fairly accurate as we saw that it sometimes took several minutes in order to come up with output data. We also saw that the constants in Eades' algorithm are accurate. Finally we were able to see that Fruchterman and Reingold's extension had a much shorter runtime, but it still increased greatly as the graphs grew. As such, the limit of 30 vertices on Eades and the limit of 40 vertices on Fruchterman and Reingold are still fairly accurate. We may be able to increase these limits slightly, but not by a whole lot as this still takes a lot of time.
+In the previous section, we mention that the measured time complexity of Eades shows $\mathcal{O}(n^3)$-like behaviour. This is quite interesting, as the literature shows that $\mathcal{O}(n^2)$ is to be expected. Although our implementation closely matches the pseudocode given, small variations may nonetheless have occurred. We have been unable to pinpoint a cause, but algorithmic errors in the less well-specified parts of the algorithm are our main suspect.
 
+Our conclusion is that even though the technology has vastly improved over the years since 1984, the algorithm of Eades is still fairly accurate as we saw that it sometimes took several minutes in order to come up with output data. We also saw that the constants in Eades' algorithm are accurate. Finally we were able to see that Fruchterman and Reingold's extension had a much shorter runtime, but it still increased greatly as the graphs grew. As such, the limit of 30 vertices on Eades and the limit of 40 vertices on Fruchterman and Reingold are still fairly accurate. We may be able to increase these limits slightly, but not by a whole lot as this still takes a lot of time.
 
 \section{Reflection}
 During our reflection of this project we have seen how we worked, what we accomplished and of course how we can improve. First of all, we underestimated certain aspects of this research. After we had found our algorithm to implement, we thought that we would be done rather quickly but we soon discovered it was far more work than we thought it would be. The implementation turned out to still be fairly challenging. This caused us to get stuck on this for longer than we would have liked. Our initial plans for test-data did not work out as we had hoped. We wanted to use the Dutch railway system as a graph, however we were unable to get this information and so we have had to scrap the idea. Handling the results still turned out to be quite the task and we have not been able to write down all that we wanted to write down. We were able to make a decent answer to our research question, but this could still need improvements since we did not have a clear question at the start of our project. It also did not help that one of our team members had to quit due to personal reasons. Overall, this was a good learning experience and we hope to be able to improve on this should we do research again.
